Imporving design for landscape mode and also trying to implement platform specifics.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  //fixing android or ios not existing target files error
+  "compilerOptions": {
+    "strict": true,
+    "moduleSuffixes": [".android", ".ios", ""]
+  }
 }
